--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,22 @@
 		<dependency>
 			<groupId>org.jzy3d</groupId>
 			<artifactId>jzy3d-api</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jzy3d</groupId>
+			<artifactId>jzy3d-javafx</artifactId>
+			<version>1.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.objecthunter</groupId>
 			<artifactId>exp4j</artifactId>
 			<version>0.4.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.matheclipse</groupId>
+			<artifactId>matheclipse-core</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
     </dependencies>
 	<repositories>
@@ -33,6 +43,24 @@
      <id>jzy3d-releases</id>
      <name>Jzy3d Releases</name>
      <url>http://maven.jzy3d.org/releases</url>
+  </repository>
+  <repository>
+    <id>snapshots-repo</id>
+    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    <releases>
+      <enabled>false</enabled>
+    </releases>
+    <snapshots>
+      <enabled>true</enabled>
+    </snapshots>
+  </repository>
+  <repository>
+    <id>jas-repository</id>
+    <url>http://krum.rz.uni-mannheim.de/maven-repository</url>
+  </repository>
+  <repository>
+    <id>Lab4Inf</id>
+    <url>http://www.lab4inf.fh-muenster.de/lab4inf/maven-repository</url>
   </repository>
 </repositories>
 <build>
